Create, read and delete images for games using URL

--- a/Sprint/Sprint/Views/Game/Edit.cshtml
+++ b/Sprint/Sprint/Views/Game/Edit.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="Developer" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="GameImages" class="control-label"> Update Image URL :</label>
+                <input asp-for="GameImages.FirstOrDefault().ImageURL" class="form-control" name="GameImages[0].ImageUrl"/>
+                <span asp-validation-for="GameImages" class="txt-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
