--- a/Sprint/Sprint/Views/Game/Create.cshtml
+++ b/Sprint/Sprint/Views/Game/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="GameTypeId" class="control-label"></label>
-                <select asp-for="GameTypeId" class ="form-control" asp-items="ViewBag.GameTypeId"></select>
+                <select asp-for="GameTypeId" class="form-control" asp-items="ViewBag.GameTypeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -25,6 +25,11 @@
                 <label asp-for="Developer" class="control-label"></label>
                 <input asp-for="Developer" class="form-control" />
                 <span asp-validation-for="Developer" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GameImages" class="control-label"> Add Image URL :</label>
+                <input asp-for="GameImages"  class="form-control"  name="GameImages[0].ImageURL"/>
+                <span asp-validation-for="GameImages" class="txt-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
