Update, delete, create, and wishlist design changes

--- a/Sprint/Sprint/Views/Game/Details.cshtml
+++ b/Sprint/Sprint/Views/Game/Details.cshtml
@@ -23,6 +23,9 @@
 
             <h5 class="text-light">@Html.DisplayNameFor(model => model.GameType)</h5>
             <p class="text-light">@Html.DisplayFor(model => model.GameType.Name)</p>
+
+            <h5 class="text-light">@Html.DisplayNameFor(model => model.RegularPrice)</h5>
+            <p class="text-light">@Html.DisplayFor(model => model.RegularPrice)</p>
         </div>
     </div>
 
