--- a/Sprint/Sprint/Views/Game/Create.cshtml
+++ b/Sprint/Sprint/Views/Game/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Create</h1>
 
-<h4>Games</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -27,20 +26,23 @@
                 <span asp-validation-for="Developer" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="RegularPrice" class="control-label"></label>
+                <input asp-for="RegularPrice" type="number" step="0.01" min="0" class="form-control" />
+                <span asp-validation-for="RegularPrice" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="GameImages" class="control-label"> Add Image URL :</label>
-                <input asp-for="GameImages"  class="form-control"  name="GameImages[0].ImageURL"/>
+                <input asp-for="GameImages" class="form-control" name="GameImages[0].ImageURL" />
                 <span asp-validation-for="GameImages" class="txt-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary w-25" />
+                <a class="btn btn-primary w-25" role="button" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
