--- a/Sprint/Sprint/Views/Game/Delete.cshtml
+++ b/Sprint/Sprint/Views/Game/Delete.cshtml
@@ -6,34 +6,31 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color:white;font-style:italic;">Are you sure you want to delete @Model.Name?</h3>
 <div>
-    <h4>Games</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Developer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Developer)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GameType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GameType.Name)
-        </dd class>
+        <div class="col-sm-6">
+            @foreach (var image in Model.GameImages)
+            {
+                <img class="img-fluid" src="@image.ImageURL">
+            }
+        </div>
+        <div class="col-md-6">
+            <h5 class="text-light">@Html.DisplayNameFor(model => model.Name)</h5>
+            <p class="text-light">@Html.DisplayFor(model => model.Name)</p>
+
+            <h5 class="text-light">@Html.DisplayNameFor(model => model.Developer)</h5>
+            <p class="text-light">@Html.DisplayFor(model => model.Developer)</p>
+
+            <h5 class="text-light">@Html.DisplayNameFor(model => model.GameType)</h5>
+            <p class="text-light">@Html.DisplayFor(model => model.GameType.Name)</p>
+        </div>      
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="GameId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger w-25" /> 
+        <a class="btn btn-primary w-25" role="button" asp-action="Index">Back to List</a>
     </form>
 </div>
