--- a/Sprint/Sprint/Views/Game/Edit.cshtml
+++ b/Sprint/Sprint/Views/Game/Edit.cshtml
@@ -33,9 +33,7 @@
                 <span asp-validation-for="RegularPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GameImages" class="control-label"> Update Image URL :</label>
-                <input asp-for="GameImages.FirstOrDefault().ImageURL" class="form-control" name="GameImages[0].ImageUrl"/>
-                <span asp-validation-for="GameImages" class="txt-danger"></span>
+                <a class="btn btn-primary w-25" role="button" asp-controller="Images" asp-action="Index" asp-route-gameId="@Model.GameId">Game Images</a>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary w-25" />
