--- a/Sprint/Sprint/Views/Home/Index.cshtml
+++ b/Sprint/Sprint/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using Sprint.ViewModels
+@model Sprint.ViewModels.HomeViewModel
+
+@{
+    ViewData["Title"] = "Moist Games";
 }
 
 <section style="padding-bottom: 30px;">
@@ -8,26 +11,38 @@
         <hr />
         <div id="carouselExampleIndicators" class="carousel slide carouselstyle moist-shadow rounded" data-ride="carousel" style="width: auto;">
             <ol class="carousel-indicators">
-                @for (int i = 0; i < ViewBag.BannerImages.Count; i++)
+                @for (int i = 0; i < Model.BannerGames.Count; i++)
                 {
                     <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i == 0 ? "active" : "")"></li>
                 }
             </ol>
             <div class="carousel-inner carouselSize">
-                @for (int i = 0; i < ViewBag.BannerImages.Count; i++)
+                @for (int i = 0; i < Model.BannerGames.Count; i++)
                 {
+                    GameItemViewModel gameItem = Model.BannerGames[i];
+
                     <div class="carousel-item @(i == 0 ? "active" : "")">
-                        <a asp-controller="Game" asp-action="Details" asp-route-id="@ViewBag.BannerImages[i].GameId">
+                        <a asp-controller="Game" asp-action="Details" asp-route-id="@gameItem.Game.GameId">
                             <div class="carousel-image">
-                                <img class="d-block carouselSize" src="@ViewBag.BannerImages[i].ImageURL" alt="@ViewBag.BannerImages[i].Game.Name">
+                                <img class="d-block carouselSize" src="@gameItem.Image.ImageURL" alt="@gameItem.Game.Name">
                             </div>
                         </a>
                         <div class="carousel-info">
-                            <h3 class="float-left">@ViewBag.BannerImages[i].Game.Name</h3>
-                            @if (ViewBag.BannerImages[i].Game.RegularPrice > 0)
-                            {
-                                <h3 class="float-right">$@ViewBag.BannerImages[i].Game.RegularPrice</h3>
-                            }
+                            <div class="d-flex">
+                                <span class="moist-banner-title mr-auto">@gameItem.Game.Name</span>
+                                @if (gameItem.Discount != null)
+                                {
+                                    <div class="mr-2">
+                                        <span class="moist-discount-regular-price text-secondary">@gameItem.Game.RegularPrice</span>
+                                        <span class="moist-discount-price text-light">@gameItem.Discount.DiscountPrice</span>
+                                    </div>
+                                    <span class="moist-discount-percent rounded">@string.Format("{0:0%}", gameItem.Discount.DiscountPrice / gameItem.Game.RegularPrice)</span>
+                                }
+                                else if (gameItem.Game.RegularPrice > 0)
+                                {
+                                    <h5 class="text-light font-weight-bold">$@gameItem.Game.RegularPrice</h5>
+                                }
+                            </div>
                         </div>
                     </div>
                 }
