--- a/Sprint/Sprint/Views/Shared/_Layout.cshtml
+++ b/Sprint/Sprint/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark font-weight-bold text-uppercase" asp-area="" asp-controller="Friends" asp-action="Index">Friends</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark font-weight-bold text-uppercase" asp-area="" asp-controller="Cart" asp-action="Index">Cart</a>
+                            </li>
                         }
                     </ul>
 
