--- a/Sprint/Sprint/wwwroot/css/site.css
+++ b/Sprint/Sprint/wwwroot/css/site.css
@@ -9,7 +9,11 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-    color: #0366d6;
+    color: orange;
+}
+
+a:hover {
+    color: orange;
 }
 
 hr {
